Cleanup + Fixes