@@ -81,6 +81,14 @@ public class SpendThresholdRuntime {
         return false;
     }
 
+    public boolean progressScaledChanged(String key, float progress, int perUnit) {
+        if (perUnit <= 1) {
+            return progressIntChanged(key, (int) progress);
+        }
+        int scaled = Math.round(progress * perUnit);
+        return progressIntChanged(key, scaled);
+    }
+
     // === Active key index ===
     public void markActive(ResourceType rt, String key, SpendThresholdSpec spec) {
         if (rt == null || key == null || key.isEmpty() || spec == null) return;
@@ -116,13 +124,7 @@ public class SpendThresholdRuntime {
 
     public Set<String> getActiveKeys(ResourceType rt) {
         var s = activeByResource.get(rt);
-        if (s == null || s.isEmpty()) return java.util.Set.of();
-        var view = activeByResourceReadOnly.get(rt);
-        if (view == null) {
-            view = java.util.Collections.unmodifiableSet(s);
-            activeByResourceReadOnly.put(rt, view);
-        }
-        return view;
+        return (s == null || s.isEmpty()) ? java.util.Set.of() : java.util.Set.copyOf(s);
     }
 
     public SpendThresholdSpec getSpec(String key) {
